Remove card margin bottom to fix gap between scrollbar

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -23,6 +23,10 @@
   cursor: pointer !important;
 }
 
+.card-title:last-child {
+  margin-bottom: 0;
+}
+
 .card-title--drag {
   box-shadow: 1px 9px 8px 1px rgba(0, 0, 0, 0.3) !important;
   opacity: 1 !important;
